[raze.crates.'libsqlite3-sys'.'0.15.0']
gen_buildrs = true

[package]
name = "interactive-fiction"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[raze]
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"

# The target to generate BUILD rules for.
target = "x86_64-unknown-linux-gnu"

[dependencies]
serde_json = "1.0.41"
rusqlite = "0.19.0"
